--- a/interfaces/Clase 2/ejercicio1.html
+++ b/interfaces/Clase 2/ejercicio1.html
@@ -10,7 +10,7 @@
 <body onload="dibujar()">
     <canvas id="canvas" width="900" height="600" style="border:#000 solid 1px"></canvas>
 
-    <p>1a</p>
+    <p>Hola, prueba git</p>
     <script src="js/Clas2.js"></script>
     <script src="js/Figura.js"></script>
     <script src="js/Rectangulo.js"></script>
