Ajustes de parametros

--- a/interfaces/Clase 2/ejercicio1.html
+++ b/interfaces/Clase 2/ejercicio1.html
@@ -9,9 +9,7 @@
 </head>
 <body onload="dibujar()">
     <canvas id="canvas" width="900" height="600" style="border:#000 solid 1px"></canvas>
-
-    <p>Hola, prueba git</p>
-    <script src="js/Clas2.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/Figura.js"></script>
     <script src="js/Rectangulo.js"></script>
     <script src="js/Ovalo.js"></script>
