--- a/TPE/TPE1/index.html
+++ b/TPE/TPE1/index.html
@@ -7,8 +7,8 @@
     <script src="js/mainTPE.js"></script>
     <title>TPE</title>
 </head>
-<body>
-    <canvas id="canvas" width="900" height="600" style="border:#000 solid 1px"></canvas>
+<body  >
+    <canvas id="canvas" width="900" height="600" style="margin:0px"></canvas>
     
 </body>
 </html>
