--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    
     <title>TPE 2</title>
 </head>
 <body>
-    
-    <!-- <input type="color" id="color" oninput="defColor(this.value);">
-    <input type="range" id="grosor" oninput="defGrosor(this.value);" min="1" max="20" value="1"> -->
-    <input type="file">
     <canvas id="canvas" width="500" height="500"></canvas>
-    <script src="js/Draw.js"></script>
+    <input type="color" id="color" oninput="defColor(this.value);">
+    <input type="range" id="grosor" oninput="defGrosor(this.value);" min="1" max="20" value="1">
+    <button onclick="borrar()">borrar</button>
     <script src="js/Main.js"></script>
 </body>
 </html>
+<!-- Fuente Color/Trazo/Grosor: https://www.youtube.com/watch?v=wQsWdizztIw -->
+ 
