--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <canvas id="canvas" width="500" height="500"></canvas>
-    <input type="color" id="color" oninput="defColor(this.value);">
-    <input type="range" id="grosor" oninput="defGrosor(this.value);" min="1" max="20" value="1">
+    <input type="color" id="color">
+    <input type="range" id="grosor">
     <input type="file" id="inp">
-    <button onclick="borrar()">borrar</button>
-    <script src="js/Main.js"></script>
+    <button id="lapiz">Lapiz</button>
     <script src="js/Image.js"></script>
+    <script src="js/Lapiz.js"></script>
+    <script src="js/Main.js"></script>
 </body>
 </html>
 <!-- Fuente Color/Trazo/Grosor: https://www.youtube.com/watch?v=wQsWdizztIw -->
