--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -13,9 +13,11 @@
     <input type="range" id="grosor">
     <input type="file" id="inp">
     <button id="lapiz">Lapiz</button>
+    <script src="js/Herramienta.js"></script>
     <script src="js/Image.js"></script>
     <script src="js/Lapiz.js"></script>
     <script src="js/Main.js"></script>
+    
 </body>
 </html>
 <!-- Fuente Color/Trazo/Grosor: https://www.youtube.com/watch?v=wQsWdizztIw -->
