--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -9,15 +9,20 @@
 </head>
 <body>
     <canvas id="canvas" width="500" height="500"></canvas>
-    <input type="color" id="color">
-    <input type="range" id="grosor">
-    <input type="file" id="inp">
-    <button id="lapiz">Lapiz</button>
+
+    <div>
+        <input type="color" id="color">
+        <input type="range" id="grosor">
+        <input type="file" id="inp">
+        <button id="lapiz">Lapiz</button>
+        <button id="goma">Goma</button>
+    </div>
+    <!------ scripts ------>
     <script src="js/Herramienta.js"></script>
     <script src="js/Image.js"></script>
     <script src="js/Lapiz.js"></script>
+    <script src="js/Goma.js"></script>
     <script src="js/Main.js"></script>
-    
 </body>
 </html>
 <!-- Fuente Color/Trazo/Grosor: https://www.youtube.com/watch?v=wQsWdizztIw -->
