Agrego borrar pantalla

--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -16,6 +16,7 @@
         <input type="file" id="inp">
         <button id="lapiz">Lapiz</button>
         <button id="goma">Goma</button>
+        <button id="limpiar">Limpiar</button>
     </div>
     <!------ scripts ------>
     <script src="js/Herramienta.js"></script>
