--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -12,11 +12,24 @@
 
     <div>
         <input type="color" id="color">
-        <input type="range" id="grosor">
+        <label for="grosor"></label>
+        <input type="range" id="grosor" value="1" min="1" max="30" step="1">
+        <div>
+            <h1>Herramientas</h1>
+            <button id="lapiz">Lapiz</button>
+            <button id="goma">Goma</button>
+            <button id="limpiar">Limpiar</button>
+        </div>
         <input type="file" id="inp">
-        <button id="lapiz">Lapiz</button>
-        <button id="goma">Goma</button>
-        <button id="limpiar">Limpiar</button>
+        <div>
+            <h1>Filtros</h1>
+            <button id="negativo">negativo</button>
+            <label for="brillo">brillo</label>
+            <input type="range" id="brillo" value="0" min="-30" max="30" step="1"/>
+            <button id="binarización">binarización</button> 
+            <button id="sepia">sepia</button>
+        </div>
+        
     </div>
     <!------ scripts ------>
     <script src="js/Herramienta.js"></script>
