Añado objeto de Imagen

--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -28,14 +28,15 @@
             <input type="range" id="brillo" value="0" min="-30" max="30" step="1"/>
             <button id="binarización">binarización</button> 
             <button id="sepia">sepia</button>
+            <button id="blur">Blur</button>
         </div>
         
     </div>
     <!------ scripts ------>
     <script src="js/Herramienta.js"></script>
-    <script src="js/Image.js"></script>
     <script src="js/Lapiz.js"></script>
     <script src="js/Goma.js"></script>
+    <script src="js/Imagen.js"></script>
     <script src="js/Main.js"></script>
 </body>
 </html>
