--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <canvas id="canvas" width="500" height="500"></canvas>
-
     <div>
         <input type="color" id="color">
         <label for="grosor"></label>
@@ -23,14 +22,13 @@
         <input type="file" id="inp">
         <div>
             <h1>Filtros</h1>
-            <button id="negativo">negativo</button>
+            <button id="blur">Blur</button>
+            <!-- <button id="negativo">negativo</button>
             <label for="brillo">brillo</label>
             <input type="range" id="brillo" value="0" min="-30" max="30" step="1"/>
             <button id="binarización">binarización</button> 
-            <button id="sepia">sepia</button>
-            <button id="blur">Blur</button>
+            <button id="sepia">sepia</button> -->
         </div>
-        
     </div>
     <!------ scripts ------>
     <script src="js/Herramienta.js"></script>
