--- a/TPE/TPE2/Index.html
+++ b/TPE/TPE2/Index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <title>TPE 2</title>
 </head>
 <body>
@@ -22,7 +21,11 @@
                 <button id="goma">Goma</button>
                 <button id="limpiar">Limpiar</button>
             </div>
-            <input type="file" id="inp">
+            <div>
+                <h2>Seleccione su imagen</h2>
+                <input type="file" id="inp">
+            </div>
+            
             <div>
                 <div>
                     <h2>Filtros básicos</h2>
