agrego la logica de choque

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1> 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 </h1>
     <div id="contenedor">
         <div id="cielo"></div>
         <div id="personaje" class="correr"></div>
