Ahora se muere, falta pararlo

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -12,7 +12,7 @@
     <h1> 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 </h1>
     <div id="contenedor">
         <div id="cielo"></div>
-        <div id="personaje" class="correr"></div>
+        <div id="personaje" class="zombie"></div>
         <div id="piso"></div>
     </div>
     
