ahora muere y desaparece por que no se ocmo parar el ultimo frame soy sincer lo se

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -11,7 +11,9 @@
 <body>
     <h1> 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 </h1>
     <div id="contenedor">
-        <div id="cielo"></div>
+        <div id="cielo">
+            <img id="gameOver" class="ocultar" src="images/plants-vs-zombie/gameover1.png" alt="">
+        </div>
         <div id="personaje" class="zombie"></div>
         <div id="piso"></div>
     </div>
