Revert "Refactor clase Enemigo por Obstaculo"
This reverts commit 093491f9434111e5665c0d95c40199915786c364.

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -20,7 +20,7 @@
     
     <script src="Personaje.js"></script>
     <script src="Runner.js"></script>
-    <script src="Obstaculo.js"></script>
+    <script src="Enemigo.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
