Agrego herencia para Obstaculo ->Enemigo y Bonus

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> 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 </h1>
+    <h1> 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 </h1>
     <div id="contenedor">
         <div id="cielo">
             <img id="gameOver" class="ocultar" src="images/plants-vs-zombie/gameover1.png" alt="">
@@ -19,8 +19,10 @@
     </div>
     
     <script src="Personaje.js"></script>
+    <script src="Obstaculo.js"></script>
     <script src="Runner.js"></script>
     <script src="Enemigo.js"></script>
+    <script src="Bonus.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
