--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animacion</title>
+    <title>TPE3</title>
     
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> 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 </h1>
     <div id="contenedor">
         <div id="cielo">
             <img id="gameOver" class="ocultar" src="images/plants-vs-zombie/gameover1.png" alt="">
