Paso arch js a js/

--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -17,11 +17,11 @@
         <div id="piso"></div>
     </div>
     
-    <script src="Personaje.js"></script>
-    <script src="Obstaculo.js"></script>
-    <script src="Runner.js"></script>
-    <script src="Enemigo.js"></script>
-    <script src="Bonus.js"></script>
+    <script src="js/Personaje.js"></script>
+    <script src="js/Obstaculo.js"></script>
+    <script src="js/Runner.js"></script>
+    <script src="js/Enemigo.js"></script>
+    <script src="js/Bonus.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
