--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -11,6 +11,11 @@
 <body>
     <div id="contenedor">
         <div id="cielo">
+            <div id="vidas">
+                <div id="vida1"></div> 
+                <div id="vida2"></div> 
+                <div id="vida3"></div>
+            </div>
             <img id="gameOver" class="ocultar" src="images/plants-vs-zombie/gameover1.png" alt="">
         </div>
         <div id="personaje" class="zombie"></div>
