--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -11,6 +11,8 @@
 <body>
     <div id="contenedor">
         <div id="cielo">
+            <div id="score">
+            </div>
             <div id="vidas">
                 <div id="vida1"></div> 
                 <div id="vida2"></div> 
