--- a/TPE/TPE3/animacion/index.html
+++ b/TPE/TPE3/animacion/index.html
@@ -29,6 +29,7 @@
     <script src="js/Runner.js"></script>
     <script src="js/Enemigo.js"></script>
     <script src="js/Bonus.js"></script>
+    <script src="js/Moneda.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
